<resources>
    <string name="app_name">Read Later</string>
    <string name="content_authority" translatable="false">com.example.mborzenkov.readlaterlist</string>
    <string name="title_activity_colorpicker">Choose color</string>
        <string name="mainlist_empty_label">List is empty</string>
        <string name="mainlist_empty_description">Add something to list with button on bottom right corner.</string>
        <string name="mainlist_menu_refresh">Refresh</string>
        <string name="mainlist_menu_delete_all_question_title">Delete all</string>
        <string name="mainlist_menu_delete_all_question_text">This action will delete everything from db. Are you sure to proceed?</string>
        <string name="mainlist_menu_add_placeholders_question_title">Fill with placeholders</string>
        <string name="mainlist_menu_add_placeholders_question_text">Type the number of placeholders you wish to add and press OK.</string>
        <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
        <string name="snackbar_item_added">Item added</string>
        <string name="snackbar_item_edited">Item edited</string>
        <string name="snackbar_item_removed">Item removed</string>
        <string name="mainlist_icon_contentdescription">Color</string>
        <string name="searchable_mainlist_hint">Search items</string>
        <string name="mainlist_menu_search">Search</string>
        <string name="mainlist_user_title">User:</string>
        <string name="mainlist_user_change">(change)</string>
        <string name="mainlist_user_change_question_title">Change user</string>
        <string name="mainlist_user_change_question_text">Please type ID of user:</string>
        <string name="mainlist_drawer_title">Settings</string>
        <string name="mainlist_drawer_filters_title">Filter by</string>
        <string name="mainlist_drawer_filters_default">Default</string>
        <string name="mainlist_drawer_filters_save">+ Add filter</string>
        <string name="mainlist_drawer_filters_remove">- Remove filter</string>
        <string name="mainlist_drawer_filters_save_question_title">Type name for new filter</string>
        <string name="mainlist_drawer_filters_remove_question_title">Remove filter</string>
        <string name="mainlist_drawer_filters_remove_question_text">This action will remove selected filter permanently. Are you sure to proceed?</string>
        <string name="mainlist_drawer_date_all">No date filter</string>
        <string name="mainlist_drawer_date_creation">Creation date</string>
        <string name="mainlist_drawer_date_modified">Last modify date</string>
        <string name="mainlist_drawer_date_viewed">Last view date</string>
        <string name="mainlist_drawer_datefrom_hint"><font size="12">from</font></string>
        <string name="mainlist_drawer_dateto_hint"><font size="12">to</font></string>
        <string name="mainlist_drawer_color_title">Colors</string>
        <string name="mainlist_drawer_sort_title">Order</string>
        <string name="mainlist_drawer_sort_label">Label</string>
        <string name="mainlist_drawer_sort_created">Created</string>
        <string name="mainlist_drawer_sort_modified">Modified</string>
        <string name="mainlist_drawer_sort_viewed">Viewed</string>
        <string name="mainlist_drawer_sort_manual">Manual</string>
        <string name="mainlist_drawer_sort_symb_asc" translatable="false">↡</string>
        <string name="mainlist_drawer_sort_symb_desc" translatable="false">↑</string>
        <string name="mainlist_drawer_debug_title">Debug options</string>
        <string name="mainlist_drawer_deleteall_title">Delete all</string>
        <string name="mainlist_drawer_fillplaceholders_title">Fill data</string>
        <string name="mainlist_drawer_backup_title">Backup data</string>
        <string name="mainlist_drawer_backup_save">Save</string>
        <string name="mainlist_drawer_backup_restore">Restore</string>
        <string name="mainlist_drawer_backup_save_question_title">Save to file</string>
        <string name="mainlist_drawer_backup_save_question_text">This action will make backup of db in file. Proceed?</string>
        <string name="mainlist_drawer_backup_restore_question_title">Restore from file</string>
        <string name="mainlist_drawer_backup_restore_question_text">This action will replace everything in db with data in backup file. Are you sure to proceed?</string>
        <string name="mainlist_longloading_title">Loading is active</string>
        <string name="mainlist_longloading_text">Some long action is still running. Please wait until it finished before starting new long action.</string>
        <string name="mainlist_conflict_title">Choose version to save</string>
        <string name="mainlist_conflict_button_next">Next</string>
        <string name="mainlist_conflict_button_save">Save</string>
        <string name="notification_backup_save_title">Saving backup</string>
        <string name="notification_backup_restore_title">Restoring from backup</string>
        <string name="toast_backup_save_finished">All data saved</string>
        <string name="toast_backup_restore_finished">All data restored</string>
        <string name="notification_debug_fillplaceholders_title">Filling with placeholders</string>
        <string name="notification_debug_deleteall_title">Deleting all data</string>
        <string name="edititem_title_add">New item</string>
        <string name="edititem_title_edit">Edit item</string>
        <string name="edititem_label_hint">Label</string>
        <string name="edititem_description_hint">Description</string>
        <string name="edititem_color_hint">Color</string>
        <string name="edititem_date_created">Created:</string>
        <string name="edititem_date_modified">Modified:</string>
        <string name="edititem_imageurl_hint">Image url</string>
        <string name="edititem_image_contentdescription">Image from url</string>
        <string name="edititem_error_title_empty">Please enter label</string>
        <string name="edititem_error_imageurl_malformed">Please type correct URL</string>
        <string name="edititem_error_imageurl_onload">Error loading image from URL</string>
        <string name="edititem_menu_delete">Delete</string>
        <string name="edititem_menu_delete_question_title">Delete item</string>
        <string name="edititem_menu_delete_question_text">Are you sure to delete item?</string>
        <string name="edititem_menu_save">Save</string>
        <string name="edititem_menu_back_question_title">Undo changes</string>
        <string name="edititem_menu_back_question_text">Are you sure to undo changes?</string>
    <string name="colorpicker_chosen_label">Choose color</string>
    <string name="colorpicker_favorites_label">Favorite colors</string>
    <string name="colorpicker_RGB" translatable="false">RGB</string>
    <string name="colorpicker_HSV" translatable="false">HSV</string>
    <string name="colorpicker_RGB_VAL" translatable="false">244, 244, 244</string>
    <string name="colorpicker_HSV_VAL" translatable="false">299.30, 0.67, 0.54</string>
    <string name="db_error_uriunknown">Unknown uri: </string>
    <string name="db_error_insert">Failed to insert row in: </string>
</resources>