<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width_drawer"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_filterdrawer_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mainlist_user_title"
        />

    <TextView
        android:id="@+id/tv_filterdrawer_user_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_small"
        android:layout_marginStart="@dimen/marginhorizontal_small"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_filterdrawer_user_label"
        tools:text="1005931"
        />

    <TextView
        android:id="@+id/tv_filterdrawer_user_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_small"
        android:layout_marginStart="@dimen/marginhorizontal_small"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_filterdrawer_user_value"
        android:text="@string/mainlist_user_change"
        style="@style/HyperLink"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filterdrawer_user_label"
        android:text="@string/mainlist_drawer_title"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_filterdrawer_filter"
        android:text="@string/mainlist_drawer_filters_title"
        />

    <Spinner
        android:id="@+id/spinner_filterdrawer_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginRight="@dimen/marginhorizontal_normal"
        android:layout_marginEnd="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Spinner
        android:id="@+id/spinner_filterdrawer_datefilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginRight="@dimen/marginhorizontal_normal"
        android:layout_marginEnd="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_filter"
        />

    <EditText
        android:id="@+id/edittext_filterdrawer_datefrom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_filterdrawer_datefilter"
        android:hint="@string/mainlist_drawer_datefrom_hint"
        style="@style/DateInput"
        />

    <EditText
        android:id="@+id/edittext_filterdrawer_dateto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintTop_toBottomOf="@+id/spinner_filterdrawer_datefilter"
        app:layout_constraintLeft_toRightOf="@+id/edittext_filterdrawer_datefrom"
        android:hint="@string/mainlist_drawer_dateto_hint"
        style="@style/DateInput"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        android:text="@string/mainlist_drawer_color_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_filterdrawer_dateto"
        />

    <LinearLayout
        android:id="@+id/linearlayout_filterdrawer_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginhorizontal_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_color"
        tools:minHeight="@dimen/height_circlelayout_small"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_sorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        android:text="@string/mainlist_drawer_sort_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_filterdrawer_favorites"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortmanual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_sorting"
        android:text="@string/mainlist_drawer_sort_manual"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortmanual"
        android:text="@string/mainlist_drawer_sort_label"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_sortname"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortmanual"
        android:text="@string/mainlist_drawer_sort_created"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortmodified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortname"
        android:text="@string/mainlist_drawer_sort_modified"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_sortmodified"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortname"
        android:text="@string/mainlist_drawer_sort_viewed"
        style="@style/Button"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        android:text="@string/mainlist_drawer_backup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortmodified"
        />

    <Button
        android:id="@+id/button_filterdrawer_backupsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_backup"
        android:text="@string/mainlist_drawer_backup_save"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_backuprestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_backupsave"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_backup"
        android:text="@string/mainlist_drawer_backup_restore"
        style="@style/Button"
        />

    <TextView
        android:id="@+id/textview_filterdrawer_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_normal"
        android:text="@string/mainlist_drawer_debug_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_backupsave"
        />

    <Button
        android:id="@+id/button_filterdrawer_fillplaceholders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_debug"
        android:text="@string/mainlist_drawer_fillplaceholders_title"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_deleteall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_fillplaceholders"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_debug"
        android:text="@string/mainlist_drawer_deleteall_title"
        style="@style/Button"
        />

</android.support.constraint.ConstraintLayout>